.golden/8270079288213682032/golden

INITIALPATH:7:11: error:
    • String type is incompatible with inside padding (=).
    • In the first argument of ‘Data.Text.Internal.Builder.fromString’, namely ‘(((((PyF.Internal.QQ.formatAny PyF.Formatters.Minus) ((PyF.Internal.QQ.PaddingK 100) (Just (Nothing, PyF.Formatters.AlignInside)))) Nothing) Nothing) hello)’
      In the first argument of ‘PyF.magicFormat’, namely ‘(Data.Text.Internal.Builder.fromString (((((PyF.Internal.QQ.formatAny PyF.Formatters.Minus) ((PyF.Internal.QQ.PaddingK 100) (Just (Nothing, PyF.Formatters.AlignInside)))) Nothing) Nothing) hello))’
      In the expression: (PyF.magicFormat (Data.Text.Internal.Builder.fromString (((((PyF.Internal.QQ.formatAny PyF.Formatters.Minus) ((PyF.Internal.QQ.PaddingK 100) (Just (Nothing, PyF.Formatters.AlignInside)))) Nothing) Nothing) hello)))
  |
7 | main = [f|{hello:=100}|]
  |           ^^^^^^^^^^^^^^
